tests/baselines/reference/multipleClassPropertyModifiersErrors.errors.txt
multipleClassPropertyModifiersErrors.ts(4,9): error TS1434: Unexpected keyword or identifier.


==== multipleClassPropertyModifiersErrors.ts (1 errors) ====
    class C {
    	public public p1;
    	private private p2;
    	static static p3;
    	       ~~~~~~
!!! error TS1434: Unexpected keyword or identifier.
    	public private p4;
    	private public p5;
    	public static p6;
    	private static p7;
    }